--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
     <head>
         <title>Khyathi</title>
         <style>
-        @import url('https://fonts.googleapis.com/css?family=Monofett|Monoton|Oswald|Roboto|Akronim&display=swap');
+        @import url('https://fonts.googleapis.com/css?family=Monofett|Monoton|Oswald|Roboto|Akronim|East+Sea+Dokdo|Pacifico&display=swap');
             h1{
                 text-align:center;
             }
@@ -17,7 +17,8 @@
             }
             .id2
             {
-                font-style:italic;
+                font-size: 25px;
+                font-family:"East Sea Dokdo";
             }
             .id3{
                 text-align:right;
@@ -27,7 +28,7 @@
             .id4{
                 text-align:right;
                 color:blue;
-                font-style:italic;
+                font-family:"Pacifico";
                 font-weight:bold;
             }
         </style>
@@ -49,15 +50,15 @@
         </ul>
         <h2> Education </h2>
         <p><span class="id1">RGUKT</span> - <span style="font-family:Akronim">AUG'10 - MAY'14</span></p>
-        <p><span class="id2">Btech graduated </span> in <span style="color:blue">Computer Science Engineering</span></p>
+        <p><span style="font-style:italic">Btech graduated </span> in <span style="color:blue" class="id1">Computer Science Engineering</span></p>
         <h2>Experience</h2>
-        <p>Crane & Jenkins,Software Engineer</p>
+        <p class="id1">Crane & Jenkins,Software Engineer</p>
         <ol type="A" class="id2">
             <li>Wrote,modified,and debugged software for clients</li>
             <li>Developed code to complete assigned project by deadline</li>
             <li>Develped HTML,CSS,JavaScript,and JSP pages for user interaction</li>
         </ol>
-        <p>Crane & Jenkins,Software Engineer</p>
+        <p class="id1">Crane & Jenkins,Software Engineer</p>
          <ol type="I" class="id2">
             <li>Wrote,modified,and debugged software for clients</li>
             <li>Developed code to complete assigned project by deadline</li>
