--- a/assignments/assignment-2/assignment2.html
+++ b/assignments/assignment-2/assignment2.html
@@ -7,18 +7,18 @@
   </head>
 
   <body>
-    <div class="id1" style="width:100%; height:40px;"></div>
+    <div class="id1" style="width:100%;"></div>
     <div style="margin-top:15px;">
-    <span class="id2" style="width:49%; height:40px; margin-right:2%"></span><span class="id2" style="width:49%; height:40px;"></span>
+    <span class="id2" style="width:49%; margin-right:2%"></span><span class="id2" style="width:49%;"></span>
     </div>
     <div style="margin-top:10px;">
-    <span class="id1" style="width:32%; height:40px; margin-right:2%;"></span><span class="id1" style="width:32%; height:40px; margin-right:2%;"></span><span class="id1" style="width:32%; height:40px;"></span>
+    <span class="id1" style="width:32%;margin-right:2%;"></span><span class="id1" style="width:32%;margin-right:2%;"></span><span class="id1" style="width:32%;"></span>
     </div>
     <div style="margin-top:10px;">
-    <span class="id2" style="width:23.5%; height:40px; margin-right:2%;"></span><span class="id2" style="width:23.5%; height:40px; margin-right:2%;"></span><span class="id2" style="width:23.5%; height:40px; margin-right:2%;"></span><span class="id2" style="width:23.5%; height:40px;"></span>
+    <span class="id2" style="width:23.5%;margin-right:2%;"></span><span class="id2" style="width:23.5%;margin-right:2%;"></span><span class="id2" style="width:23.5%;margin-right:2%;"></span><span class="id2" style="width:23.5%;"></span>
     </div>
     <div style="margin-top:10px;">
-    <span class="id1" style="width:6.5%; height:40px; margin-right:2%;"></span><span class="id1" style="width:6.5%; height:40px; margin-right:2%;"></span><span class="id1" style="width:6.5%; height:40px; margin-right:2%;"></span><span class="id1" style="width:6.5%; height:40px; margin-right:2%;"></span><span class="id1" style="width:6.5%; height:40px; margin-right:2%;"></span><span class="id1" style="width:6.5%; height:40px; margin-right:2%;"></span><span class="id1" style="width:6.5%; height:40px; margin-right:2%;"></span><span class="id1" style="width:6.5%; height:40px; margin-right:2%;"></span><span class="id1" style="width:6.5%; height:40px; margin-right:2%;"></span><span class="id1" style="width:6.5%; height:40px; margin-right:2%;"></span><span class="id1" style="width:6.5%; height:40px; margin-right:2%;"></span><span class="id1" style="width:6.5%; height:40px;"></span>
+    <span class="id1" style="width:6.5%;margin-right:2%;"></span><span class="id1" style="width:6.5%; margin-right:2%;"></span><span class="id1" style="width:6.5%;margin-right:2%;"></span><span class="id1" style="width:6.5%; margin-right:2%;"></span><span class="id1" style="width:6.5%; margin-right:2%;"></span><span class="id1" style="width:6.5%;margin-right:2%;"></span><span class="id1" style="width:6.5%;margin-right:2%;"></span><span class="id1" style="width:6.5%; margin-right:2%;"></span><span class="id1" style="width:6.5%;margin-right:2%;"></span><span class="id1" style="width:6.5%; margin-right:2%;"></span><span class="id1" style="width:6.5%;margin-right:2%;"></span><span class="id1" style="width:6.5%;"></span>
     </div>
   </body>
 </html>
