--- a/assignments/assignment-2/assignment2.html
+++ b/assignments/assignment-2/assignment2.html
@@ -8,17 +8,17 @@
 
   <body>
     <div class="id1" style="width:100%;"></div>
-    <div style="margin-top:15px;">
-    <span class="id2" style="width:49%; margin-right:2%"></span><span class="id2" style="width:49%;"></span>
+    <div class="id3">
+    <span class="id2 sec mar"></span><span class="id2 sec"></span>
     </div>
-    <div style="margin-top:10px;">
-    <span class="id1" style="width:32%;margin-right:2%;"></span><span class="id1" style="width:32%;margin-right:2%;"></span><span class="id1" style="width:32%;"></span>
+    <div class="id3">
+    <span class="id1 third mar"></span><span class="id1 third mar"></span><span class="id1 third"></span>
     </div>
-    <div style="margin-top:10px;">
-    <span class="id2" style="width:23.5%;margin-right:2%;"></span><span class="id2" style="width:23.5%;margin-right:2%;"></span><span class="id2" style="width:23.5%;margin-right:2%;"></span><span class="id2" style="width:23.5%;"></span>
+    <div class="id3">
+    <span class="id2 four mar"></span><span class="id2 four mar"></span><span class="id2 four mar"></span><span class="id2 four"></span>
     </div>
-    <div style="margin-top:10px;">
-    <span class="id1" style="width:6.5%;margin-right:2%;"></span><span class="id1" style="width:6.5%; margin-right:2%;"></span><span class="id1" style="width:6.5%;margin-right:2%;"></span><span class="id1" style="width:6.5%; margin-right:2%;"></span><span class="id1" style="width:6.5%; margin-right:2%;"></span><span class="id1" style="width:6.5%;margin-right:2%;"></span><span class="id1" style="width:6.5%;margin-right:2%;"></span><span class="id1" style="width:6.5%; margin-right:2%;"></span><span class="id1" style="width:6.5%;margin-right:2%;"></span><span class="id1" style="width:6.5%; margin-right:2%;"></span><span class="id1" style="width:6.5%;margin-right:2%;"></span><span class="id1" style="width:6.5%;"></span>
+    <div class="id3">
+    <span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth"></span>
     </div>
   </body>
 </html>
