--- a/assignments/assignment-3/assignment3.html
+++ b/assignments/assignment-3/assignment3.html
@@ -5,22 +5,22 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="assignment3.css" />
   </head>
-  <body style="background-color:grey;">
-    <h1><span style="font-weight:normal;">My </span>Projec<span style="border-bottom:2px solid dodgerblue">ts</span></h1>
-    <div class="id1" style="margin-right:2%;">
-      <h2>Tittle</h2>
-      <h3>Sub Tittle</h3>
-      <p>hi this is khyathi rewe wreqwr fref efdf hi this is khyathi rewe wreqwr fref efdf hhjhjhj df sds fds fsdg g</p>
+  <body>
+    <h1><span class="id5">My </span>Projec<span class="id4">ts</span></h1>
+    <div class="id1 id2">
+      <h2 class="id3">Tittle 1</h2>
+      <h3 class="id3">Sub Tittle</h3>
+      <p class="id3">hi this is khyathi rewe wreqwr fref efdf hi this is khyathi rewe wreqwr fref efdf hhjhjhj df sds fds fsdg g</p>
     </div
-    ><div class="id1" style="margin-right:2%;">
-      <h2>Tittle</h2>
-      <h3>Sub Tittle</h3>
-      <p>hi this is khyathi rewe wreqwr fref efdf hi this is khyathi rewe wreqwr fref efdf hhjhjhj df sds fds fsdg g</p>
+    ><div class="id1 id2">
+      <h2 class="id3">Tittle 1</h2>
+      <h3 class="id3">Sub Tittle</h3>
+      <p class="id3">hi this is khyathi rewe wreqwr fref efdf hi this is khyathi rewe wreqwr fref efdf hhjhjhj df sds fds fsdg g</p>
     </div
     ><div class="id1">
-      <h2>Tittle</h2>
-      <h3>Sub Tittle</h3>
-      <p>hi this is khyathi rewe wreqwr fref efdf hi this is khyathi rewe wreqwr fref efdf hhjhjhj df sds fds fsdg g</p>
+      <h2 class="id3">Tittle 1</h2>
+      <h3 class="id3">Sub Tittle</h3>
+      <p class="id3">hi this is khyathi rewe wreqwr fref efdf hi this is khyathi rewe wreqwr fref efdf hhjhjhj df sds fds fsdg g</p>
     </div>
   </body>
 </html>
