--- a/assignments/assignment-3/assignment3.html
+++ b/assignments/assignment-3/assignment3.html
@@ -10,7 +10,7 @@
     <div class="id1 id2">
       <h2 class="id3">Tittle 1</h2>
       <h3 class="id3">Sub Tittle</h3>
-      <p class="id3">hi this is khyathi rewe wreqwr fref efdf hi this is khyathi rewe wreqwr fref efdf hhjhjhj df sds fds fsdg g</p>
+      <p class="id3">hi this is khyathi rewe wreqwr fref efdf hi this is khyathi rewe wreqwr fref ertyrhrwr e re hfeew wht r  wd g 2t  ve h r h r hw rt th t  efdf hhjhjhj df sds fds fsdg g</p>
     </div
     ><div class="id1 id2">
       <h2 class="id3">Tittle 1</h2>
