--- a/assignments/assignment-6/assignment6.html
+++ b/assignments/assignment-6/assignment6.html
@@ -12,13 +12,21 @@
     <p class="content-align">Get trained in industry relevant skills with our reverse-engineered curriculum that transforms you into a top performer </p>
     </div>
     <div class="divcontainerstyle">
-      <span class="techstyle">Tech</span><span class="container-style managementstyle">Management</span><span class="highereducationstyle">Higher Education</span><span class="entrepreneurstyle">Entrepreneurship</span>
+      <span class="techstyle categories_style">Tech</span><span class="categories_style managementstyle">Management</span><span class="educationstyle categories_style">Higher Education</span><span class="entrepreneurstyle categories_style">Entrepreneurship</span>
+    </div>
+    <div class="comingsoon">
+      <p>Coming Soon</p>
     </div>
     <div>
-      <span class="container marginright">Full stack developer<span><img src="assets/download.svg" alt="download"></span></span><span class="container marginright">competitive programming <span><img src="assets/download.svg" alt="download"></span></span><span class="container">AI/ML Engineer <span><img src="assets/download.svg" alt="download"></span></span>
+      <span class="techcontainer techcatalogueborder marginright" style="padding-right:10px;">Full stack developer<span><img src="assets/download.svg" alt="download" class="imgpadding"></span></span><span class="techcontainer techcatalogueborder marginright">Competitive programming <span><img src="assets/download.svg" alt="download" class="comimgpad"></span></span><span class="techcontainer techcatalogueborder">AI/ML Engineer <span><img src="assets/download.svg" alt="download" class="imgpadding"></span></span>
     </div>
     <div>
-      <span class="container marginright">Data Scientist<span><img src="assets/download.svg" alt="download"></span></span><span class="container marginright">VR & AR Developer</span><span class="container">IoT Developer</span>
+      <span class="datascientstcontainer marginright techcatalogueborder">Data Scientist<span><img src="assets/download.svg" alt="download" class="datascientstimgpad"></span></span><span class="datascientstcontainer marginright arvrcatalogueborder">VR & AR Developer</span><span class="datascientstcontainer arvrcatalogueborder">IoT Developer</span>
     </div>
+    <div>
+      <span class="cybersecurity_container marginright arvrcatalogueborder">Cyber Security Analyst</span><span class="techcontainer marginright arvrcatalogueborder">Blockchain Developer</span>
+    </div>
+    <p class="waitlist">JOIN THE WAITLIST</p>
+    <p class="iit">5000+ IITians enrolled for the first batch</p>
   </body>
 </html>
