--- a/assignments/assignment-6/assignment6.html
+++ b/assignments/assignment-6/assignment6.html
@@ -7,10 +7,13 @@
   </head>
 
   <body>
-    <div class="divstyle">
+    <main class="divstyle">
     <h3 class="content-align">REVERSE ENGINEERED CURRICULUM</h3>
+    </main>
+    <article class="divstyle">
     <p class="content-align">Get trained in industry relevant skills with our reverse-engineered curriculum that transforms you into a top performer </p>
-    </div>
+    </article>
+    <section>
     <div class="divcontainerstyle">
       <span class="techstyle categories_style">Tech</span><span class="categories_style managementstyle">Management</span><span class="educationstyle categories_style">Higher Education</span><span class="entrepreneurstyle categories_style">Entrepreneurship</span>
     </div>
@@ -18,15 +21,18 @@
       <p>Coming Soon</p>
     </div>
     <div>
-      <span class="techcontainer techcatalogueborder marginright" style="padding-right:10px;">Full stack developer<span><img src="assets/download.svg" alt="download" class="imgpadding"></span></span><span class="techcontainer techcatalogueborder marginright">Competitive programming <span><img src="assets/download.svg" alt="download" class="comimgpad"></span></span><span class="techcontainer techcatalogueborder">AI/ML Engineer <span><img src="assets/download.svg" alt="download" class="imgpadding"></span></span>
+      <span class="fullcontainer fullcatalogueborder marginright">Full stack developer<span><img src="assets/download.svg" alt="download" class="imgpadding"></span></span><span class="fullcontainer fullcatalogueborder marginright">Competitive programming <span><img src="assets/download.svg" alt="download" class="comimgpad"></span></span><span class="fullcontainer fullcatalogueborder">AI/ML Engineer <span><img src="assets/download.svg" alt="download" class="aiimgpad"></span></span>
     </div>
     <div>
-      <span class="datascientstcontainer marginright techcatalogueborder">Data Scientist<span><img src="assets/download.svg" alt="download" class="datascientstimgpad"></span></span><span class="datascientstcontainer marginright arvrcatalogueborder">VR & AR Developer</span><span class="datascientstcontainer arvrcatalogueborder">IoT Developer</span>
+      <span class="datascientstcontainer marginright fullcatalogueborder">Data Scientist<span><img src="assets/download.svg" alt="download" class="datascientstimgpad"></span></span><span class="datascientstcontainer marginright arvrcatalogueborder">VR & AR Developer</span><span class="datascientstcontainer arvrcatalogueborder">IoT Developer</span>
     </div>
     <div>
-      <span class="cybersecurity_container marginright arvrcatalogueborder">Cyber Security Analyst</span><span class="techcontainer marginright arvrcatalogueborder">Blockchain Developer</span>
+      <span class="cybersecurity_container marginright arvrcatalogueborder">Cyber Security Analyst</span><span class="fullcontainer marginright arvrcatalogueborder">Blockchain Developer</span>
     </div>
+    </section>
+    <footer>
     <p class="waitlist">JOIN THE WAITLIST</p>
     <p class="iit">5000+ IITians enrolled for the first batch</p>
+    </footer>
   </body>
 </html>
