--- a/assignments/assignment-6/assignment6.html
+++ b/assignments/assignment-6/assignment6.html
@@ -7,11 +7,13 @@
   </head>
 
   <body>
-    <main class="divstyle">
-    <h3 class="content-align">REVERSE ENGINEERED CURRICULUM</h3>
-    </main>
     <article class="divstyle">
-    <p class="content-align">Get trained in industry relevant skills with our reverse-engineered curriculum that transforms you into a top performer </p>
+        <header>
+          <h3 class="content-align">REVERSE ENGINEERED CURRICULUM</h3>
+        </header>
+        <section>
+          <p class="content-align">Get trained in industry relevant skills with our reverse-engineered curriculum that transforms you into a top performer </p>
+        </section>
     </article>
     <section>
     <div class="divcontainerstyle">
