--- a/assignments/assignment-8/assignment8.html
+++ b/assignments/assignment-8/assignment8.html
@@ -7,9 +7,10 @@
   </head>
 
   <body>
-    <div class="middleimg">
+    <div class="imgdiv">
+      <img src="../../frnds.jpg" alt="profile" class="middleimg">
     </div>
-    <h1>Hello, I'm Steven Wisdom</h1>
+    <h1>Hello, I'm Khyathi Reddy</h1>
     <h2>Web Developer</h2>
     <div class="toolbarborder">
     </div>
