--- a/assignments/assignment-2/assignment2.html
+++ b/assignments/assignment-2/assignment2.html
@@ -7,18 +7,18 @@
   </head>
 
   <body>
-    <div class="id1" style="width:100%;"></div>
-    <div class="id3">
-    <span class="id2 sec mar"></span><span class="id2 sec"></span>
+    <div class="blockstyle first"></div>
+    <div class="spacebetweenblocks">
+    <span class="blockstyle2 sec mar"></span><span class="blockstyle2 sec"></span>
     </div>
-    <div class="id3">
-    <span class="id1 third mar"></span><span class="id1 third mar"></span><span class="id1 third"></span>
+    <div class="spacebetweenblocks">
+    <span class="blockstyle third mar"></span><span class="blockstyle third mar"></span><span class="blockstyle third"></span>
     </div>
-    <div class="id3">
-    <span class="id2 four mar"></span><span class="id2 four mar"></span><span class="id2 four mar"></span><span class="id2 four"></span>
+    <div class="spacebetweenblocks">
+    <span class="blockstyle2 four mar"></span><span class="blockstyle2 four mar"></span><span class="blockstyle2 four mar"></span><span class="blockstyle2 four"></span>
     </div>
-    <div class="id3">
-    <span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth mar"></span><span class="id1 fifth"></span>
+    <div class="spacebetweenblocks">
+    <span class="blockstyle fifth mar"></span><span class="blockstyle fifth mar"></span><span class="blockstyle fifth mar"></span><span class="blockstyle fifth mar"></span><span class="blockstyle fifth mar"></span><span class="blockstyle fifth mar"></span><span class="blockstyle fifth mar"></span><span class="blockstyle fifth mar"></span><span class="blockstyle fifth mar"></span><span class="blockstyle fifth mar"></span><span class="blockstyle fifth mar"></span><span class="blockstyle fifth"></span>
     </div>
   </body>
 </html>
