--- a/assignments/assignment-3/assignment3.html
+++ b/assignments/assignment-3/assignment3.html
@@ -6,21 +6,21 @@
     <link rel="stylesheet" type="text/css" href="assignment3.css" />
   </head>
   <body>
-    <h1><span class="id5">My </span>Projec<span class="id4">ts</span></h1>
-    <div class="id1 id2">
-      <h2 class="id3">Tittle 1</h2>
-      <h3 class="id3">Sub Tittle</h3>
-      <p class="id3">hi this is khyathi rewe wreqwr fref efdf hi this is khyathi rewe wreqwr fref ertyrhrwr e re hfeew wht r  wd g 2t  ve h r h r hw rt th t  efdf hhjhjhj df sds fds fsdg g</p>
+    <h1><span class="heading_font">My </span>Projec<span class="heading_border">ts</span></h1>
+    <div class="cards_space cards_style">
+      <h2 class="cards_padding">Tittle 1</h2>
+      <h3 class="cards_padding">Sub Tittle</h3>
+      <p class="cards_padding">hi this is khyathi rewe wreqwr fref efdf hi this is khyathi rewe wreqwr fref efdf hhjhjhj df sds fds fsdg g</p>
     </div
-    ><div class="id1 id2">
-      <h2 class="id3">Tittle 1</h2>
-      <h3 class="id3">Sub Tittle</h3>
-      <p class="id3">hi this is khyathi rewe wreqwr fref efdf hi this is khyathi rewe wreqwr fref efdf hhjhjhj df sds fds fsdg g</p>
+    ><div class="cards_style cards_space">
+      <h2 class="cards_padding">Tittle 1</h2>
+      <h3 class="cards_padding">Sub Tittle</h3>
+      <p class="cards_padding">hi this is khyathi rewe wreqwr fref efdf hi this is khyathi rewe wreqwr fref efdf hhjhjhj df sds fds fsdg g</p>
     </div
-    ><div class="id1">
-      <h2 class="id3">Tittle 1</h2>
-      <h3 class="id3">Sub Tittle</h3>
-      <p class="id3">hi this is khyathi rewe wreqwr fref efdf hi this is khyathi rewe wreqwr fref efdf hhjhjhj df sds fds fsdg g</p>
+    ><div class="cards_style">
+      <h2 class="cards_padding">Tittle 1</h2>
+      <h3 class="cards_padding">Sub Tittle</h3>
+      <p class="cards_padding">hi this is khyathi rewe wreqwr fref efdf hi this is khyathi rewe wreqwr fref efdf hhjhjhj df sds fds fsdg g</p>
     </div>
   </body>
 </html>
