--- a/assignments/assignment-8/assignment8.html
+++ b/assignments/assignment-8/assignment8.html
@@ -15,7 +15,9 @@
     <div class="toolbarborder">
     </div>
     <div class="navtoolbar">
-    <p class="navtoolbaralign"><span>home</span><span>about</span><span>skills</span><span>hobbies</span><span>education</span><span>blog</span><span>contact</span></p>
+    <nav>
+        <p class="navtoolbaralign"><span>home</span><span>about</span><span>skills</span><span>hobbies</span><span>education</span><span>blog</span><span>contact</span></p>
+    </nav>
     </div>
   </body>
 </html>
