--- a/assignments/assignment-4/assignment4.html
+++ b/assignments/assignment-4/assignment4.html
@@ -6,22 +6,22 @@
     <link rel="stylesheet" type="text/css" href="assignment4.css" />
   </head>
   <body>
-   <h1><span class="font">My </span>Hobb<span class="border">ies</span></h1>
+   <h1><span class="heading_font">My </span>Hobb<span class="heading_border">ies</span></h1>
    <ul>
-   <li class="margin">
-       <p><img src="../../static/Hobbies/open-book/open-book.png" alt="book" class="val"><span class="val fsize">Reading</span></p>
+   <li class="hobbies_spacing">
+       <p><img src="../../static/Hobbies/open-book/open-book.png" alt="book" class="img_align"><span class="img_align hobbies_fsize">Reading</span></p>
     </li>
-   <li class="margin">
-       <p><img src="../../static/Hobbies/travelling/Group 350.png" alt="travelling" class="val"><span class="val fsize">Travelling</span></p>
+   <li class="hobbies_spacing">
+       <p><img src="../../static/Hobbies/travelling/Group 350.png" alt="travelling" class="img_align"><span class="img_align hobbies_fsize">Travelling</span></p>
     </li>
-   <li class="margin">
-       <p><img src="../../static/Hobbies/music-player/music-player.png" alt="music" class="val"><span class="val fsize">Music</span></p>
+   <li class="hobbies_spacing">
+       <p><img src="../../static/Hobbies/music-player/music-player.png" alt="music" class="img_align"><span class="img_align hobbies_fsize">Music</span></p>
     </li>
-   <li class="margin">
-       <p><img src="../../static/Hobbies/swimming/swimming.png" alt="swimming" class="val"><span class="val fsize">Swimming</span></p>
+   <li class="hobbies_spacing">
+       <p><img src="../../static/Hobbies/swimming/swimming.png" alt="swimming" class="img_align"><span class="img_align hobbies_fsize">Swimming</span></p>
     </li>
-   <li class="margin">
-       <img src="../../static/Hobbies/cricket-player/cricket-player.png" alt="cricket" class="val"><span class="val fsize">Cricket</span></p>
+   <li class="hobbies_spacing">
+       <img src="../../static/Hobbies/cricket-player/cricket-player.png" alt="cricket" class="img_align"><span class="img_align hobbies_fsize">Cricket</span></p>
     </li>
     </ul>
   </body>
