--- a/bootstrap-practice/practice-bootstrap.html
+++ b/bootstrap-practice/practice-bootstrap.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link rel="stylesheet" href="../bootstrap/bootstrap.min.css" />
-    <script src="../bootstrap/jquery.min.js"></script>
-    <script src="../bootstrap/popper.min.js"></script>
-    <script src="../bootstrap/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="practice-bootstrap.css" />
-  </head>
 
-  <body>
-    <div class="container">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <link rel="stylesheet" href="../bootstrap/bootstrap.min.css" />
+  <script src="../bootstrap/jquery.min.js"></script>
+  <script src="../bootstrap/popper.min.js"></script>
+  <script src="../bootstrap/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="practice-bootstrap.css" />
+</head>
+
+<body>
+  <!--<div class="container">
       <div class="row rowpad">
         <div class="col-9 bg1">
           <p>9</p>
@@ -174,6 +172,14 @@
         </div>
         <div class="col-3 col3">3</div>
       </div>
+    </div>-->
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6 mobile1 col-lg-4"></div>
+      <div class="col-sm-12 col-md-6 mobile2 col-lg-4"></div>
+      <div class="col-sm-12 col-md-6 mobile3 col-lg-4"></div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
