--- a/bootstrap-practice/practice-bootstrap.html
+++ b/bootstrap-practice/practice-bootstrap.html
@@ -175,9 +175,10 @@
     </div>-->
   <div class="container">
     <div class="row">
-      <div class="col-sm-12 col-md-6 mobile1 col-lg-4"></div>
-      <div class="col-sm-12 col-md-6 mobile2 col-lg-4"></div>
-      <div class="col-sm-12 col-md-6 mobile3 col-lg-4"></div>
+      <div class="col-6 col-md-4 mobile1 col-xl-3"></div>
+      <div class="col-6 col-md-4 mobile2 col-xl-3"></div>
+      <div class="col-6 col-md-4 mobile3 col-xl-3"></div>
+      <div class="col-6 col-md-4 mobile4 col-xl-3"></div>
     </div>
   </div>
 </body>
