--- a/bootstrap-practice/practice-bootstrap.html
+++ b/bootstrap-practice/practice-bootstrap.html
@@ -175,12 +175,12 @@
     </div>-->
   <div class="container">
     <div class="row">
-      <div class="col-12 col-sm-6 col-md-4 mobile1 col-md-3 col-xl-2"></div>
-      <div class="col-12 col-sm-6 col-md-4 mobile2 col-md-3 col-xl-2"></div>
-      <div class="col-12 col-sm-6 col-md-4 mobile3 col-md-3 col-xl-2"></div>
-      <div class="col-12 col-sm-6 col-md-4 mobile4 col-md-3 col-xl-2"></div>
-      <div class="col-12 col-sm-6 col-md-4 mobile5 col-md-3 col-xl-2"></div>
-      <div class="col-12 col-sm-6 col-md-4 mobile6 col-md-3 col-xl-2"></div>
+      <div class="col-12 col-sm-6 col-md-4 mobile1 col-lg-3 col-xl-2"></div>
+      <div class="col-12 col-sm-6 col-md-4 mobile2 col-lg-3 col-xl-2"></div>
+      <div class="col-12 col-sm-6 col-md-4 mobile3 col-lg-3 col-xl-2"></div>
+      <div class="col-12 col-sm-6 col-md-4 mobile4 col-lg-3 col-xl-2"></div>
+      <div class="col-12 col-sm-6 col-md-4 mobile5 col-lg-3 col-xl-2"></div>
+      <div class="col-12 col-sm-6 col-md-4 mobile6 col-lg-3 col-xl-2"></div>
     </div>
   </div>
 </body>
