--- a/bootstrap-practice/practice-bootstrap.html
+++ b/bootstrap-practice/practice-bootstrap.html
@@ -175,12 +175,24 @@
     </div>-->
   <div class="container">
     <div class="row">
-      <div class="col-12 col-sm-6 col-md-4 mobile1 col-lg-3 col-xl-2"></div>
-      <div class="col-12 col-sm-6 col-md-4 mobile2 col-lg-3 col-xl-2"></div>
+      <!--<div class="col-12 col-sm-6 col-md-4 mobile1 col-lg-3 col-xl-2"></div>
+      <div class="col-12 col-sm-6 col-md-4 mobile2 col-lg col-xl-2"></div>
       <div class="col-12 col-sm-6 col-md-4 mobile3 col-lg-3 col-xl-2"></div>
       <div class="col-12 col-sm-6 col-md-4 mobile4 col-lg-3 col-xl-2"></div>
       <div class="col-12 col-sm-6 col-md-4 mobile5 col-lg-3 col-xl-2"></div>
-      <div class="col-12 col-sm-6 col-md-4 mobile6 col-lg-3 col-xl-2"></div>
+      <div class="col-12 col-sm-6 col-md-4 mobile6 col-lg-3 col-xl-2"></div>-->
+      <div class="col-12 col-md-6">
+          <div class="CompaniesBlock">PROYUGA</div>
+          <h4 class="headpad">End to End Assitance</h4>
+          <p>Proyuga Advanced Technologies Ltd. develops transformative products in VR, AR & MR. Their first product, iB Cricket,offers the world's most immersive cricket experience</p>
+          <span class="visitWebsite">Visit website</span>
+      </div>
+      <div class="col-12 col-md-6">
+          <div class="CompaniesBlock">PROYUGA</div>
+          <h4 class="headpad">End to End Assitance</h4>
+          <p>Proyuga Advanced Technologies Ltd. develops transformative products in VR, AR & MR. Their first product, iB Cricket,offers the world's most immersive cricket experience</p>
+          <span class="visitWebsite">Visit website</span>
+      </div>
     </div>
   </div>
 </body>
