--- a/bootstrap-practice/practice-bootstrap.html
+++ b/bootstrap-practice/practice-bootstrap.html
@@ -181,16 +181,16 @@
       <div class="col-12 col-sm-6 col-md-4 mobile4 col-lg-3 col-xl-2"></div>
       <div class="col-12 col-sm-6 col-md-4 mobile5 col-lg-3 col-xl-2"></div>
       <div class="col-12 col-sm-6 col-md-4 mobile6 col-lg-3 col-xl-2"></div>-->
-      <div class="col-12 col-md-6">
+      <div class="col-12 col-lg-6">
           <div class="CompaniesBlock">PROYUGA</div>
           <h4 class="headpad">End to End Assitance</h4>
           <p>Proyuga Advanced Technologies Ltd. develops transformative products in VR, AR & MR. Their first product, iB Cricket,offers the world's most immersive cricket experience</p>
           <span class="visitWebsite">Visit website</span>
       </div>
-      <div class="col-12 col-md-6">
-          <div class="CompaniesBlock">PROYUGA</div>
-          <h4 class="headpad">End to End Assitance</h4>
-          <p>Proyuga Advanced Technologies Ltd. develops transformative products in VR, AR & MR. Their first product, iB Cricket,offers the world's most immersive cricket experience</p>
+      <div class="col-12 col-lg-6">
+          <div class="CompaniesBlock">CYBEREYE</div>
+           <h4>End to End Assitance</h4>
+          <p>CyberEye Research Labs & Security Solution Pvt.Ltd. envisions to create a 'Smart and Secure World'.</p>
           <span class="visitWebsite">Visit website</span>
       </div>
     </div>
