--- a/bootstrap-practice/practice-bootstrap.html
+++ b/bootstrap-practice/practice-bootstrap.html
@@ -8,6 +8,8 @@
   <script src="../bootstrap/jquery.min.js"></script>
   <script src="../bootstrap/popper.min.js"></script>
   <script src="../bootstrap/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="practice-bootstrap.css" />
 </head>
 
@@ -172,15 +174,15 @@
         </div>
         <div class="col-3 col3">3</div>
       </div>
-    </div>-->
+    </div>-
   <div class="container">
     <div class="row">
-      <!--<div class="col-12 col-sm-6 col-md-4 mobile1 col-lg-3 col-xl-2"></div>
+      <div class="col-12 col-sm-6 col-md-4 mobile1 col-lg-3 col-xl-2"></div>
       <div class="col-12 col-sm-6 col-md-4 mobile2 col-lg col-xl-2"></div>
       <div class="col-12 col-sm-6 col-md-4 mobile3 col-lg-3 col-xl-2"></div>
       <div class="col-12 col-sm-6 col-md-4 mobile4 col-lg-3 col-xl-2"></div>
       <div class="col-12 col-sm-6 col-md-4 mobile5 col-lg-3 col-xl-2"></div>
-      <div class="col-12 col-sm-6 col-md-4 mobile6 col-lg-3 col-xl-2"></div>-->
+      <div class="col-12 col-sm-6 col-md-4 mobile6 col-lg-3 col-xl-2"></div>
       <div class="col-12 col-lg-6">
           <div class="CompaniesBlock">PROYUGA</div>
           <h4 class="headpad">End to End Assitance</h4>
@@ -194,7 +196,59 @@
           <span class="visitWebsite">Visit website</span>
       </div>
     </div>
+  </div>-
+   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../frnds.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="../prmse.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="../sir.jpg" class="d-block w-100" alt="...">
+    </div>
   </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>-
+  <div class="spinner-border text-primary" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+  <div class="spinner-border text-secondary" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+  <div class="spinner-border text-success" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+  <div class="spinner-border text-danger" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+  <div class="spinner-border text-warning" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+  <div class="spinner-border text-info" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+  <div class="spinner-border text-light" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+  <div class="spinner-border text-dark" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>-->
+   <div class="container">
+     <div class="row">
+       <div class="col-12 d-lg-none col-xl-12 style">
+         
+       </div>
+     </div>
+   </div>
 </body>
 
 </html>
