--- a/bootstrap-practice/practice-bootstrap.html
+++ b/bootstrap-practice/practice-bootstrap.html
@@ -244,7 +244,7 @@
   </div>-->
    <div class="container">
      <div class="row">
-       <div class="col-12 d-lg-none d-xl style">
+       <div class="col-12 d-lg-none d-xl-flex style">
          
        </div>
      </div>
