--- a/bootstrap-practice/practice-bootstrap.html
+++ b/bootstrap-practice/practice-bootstrap.html
@@ -242,13 +242,12 @@
   <div class="spinner-border text-dark" role="status">
     <span class="sr-only">Loading...</span>
   </div>-->
-   <div class="container">
-     <div class="row">
-       <div class="col-12 d-none d-xs-flex d-md-flex d-xl-flex style">
-         
-       </div>
-     </div>
-   </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-12  d-none d-lg-none d-xs-flex d-md-flex d-xl-flex style1">hi</div>
+      <div class="col-12 d-flex d-lg-flex d-xs-none d-md-none d-xl-none style">hello</div>
+    </div>
+  </div>
 </body>
 
 </html>
