--- a/bootstrap-practice/practice-bootstrap.html
+++ b/bootstrap-practice/practice-bootstrap.html
@@ -244,8 +244,8 @@
   </div>-->
   <div class="container">
     <div class="row">
-      <div class="col-12  d-none d-lg-none d-xs-flex d-md-flex d-xl-flex style1">hi</div>
-      <div class="col-12 d-flex d-lg-flex d-xs-none d-md-none d-xl-none style">hello</div>
+      <div class="col-12  d-flex d-sm-none d-lg-none  d-md-flex d-xl-flex style1">hi</div>
+      <div class="col-12 d-none d-lg-flex d-sm-flex d-md-none d-xl-none style">hello</div>
     </div>
   </div>
 </body>
