--- a/bootstrap-practice/practice-bootstrap.html
+++ b/bootstrap-practice/practice-bootstrap.html
@@ -244,8 +244,10 @@
   </div>-->
   <div class="container">
     <div class="row">
-      <div class="col-12  d-flex d-sm-none d-lg-none  d-md-flex d-xl-flex style1">hi</div>
-      <div class="col-12 d-none d-lg-flex d-sm-flex d-md-none d-xl-none style">hello</div>
+      <div class="col-lg-6 style d-none d-lg-flex d-xl-none"></div>
+      <div class="col-lg-6 style1 d-none d-lg-flex d-xl-none"></div>
+      <div class="col-12  d-none d-md-flex d-lg-none d-xl-none style1"></div>
+      <div class="col-12 d-flex d-sm-none d-md-none d-lg-none d-xl-none style"></div>
     </div>
   </div>
 </body>
