--- a/assignments/assignment-13/assignment13.html
+++ b/assignments/assignment-13/assignment13.html
@@ -24,19 +24,12 @@
             <div>2014-2017</div><br>
             <h5>Bachelor's<br>Degree</h5>
         </div>
-        <div class="col-12 col-lg-9 descriptionBlock">
+        <div class="col-12 d-lg-none descriptionBlock">
           <h5>Computer Science Engineering</h5>
           <p>IIIT R K Valley</p>
           <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
-          </div>
-      </div>
-      <br>
-      <div class="row">
-        <div class="col-12 col-lg-3 block">
-            <div>2014-2017</div><br>
-            <h5>Bachelor's<br>Degree</h5>
         </div>
-        <div class="col-12 col-lg-9 descriptionBlock">
+        <div class="col-lg-9 descriptionBlock margin-top">
           <h5>Computer Science Engineering</h5>
           <p>IIIT R K Valley</p>
           <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
@@ -48,11 +41,33 @@
             <div>2014-2017</div><br>
             <h5>Bachelor's<br>Degree</h5>
         </div>
-        <div class="col-12 col-lg-9 descriptionBlock">
+        <div class="col-12 d-lg-none descriptionBlock">
           <h5>Computer Science Engineering</h5>
           <p>IIIT R K Valley</p>
           <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
-          </div>
+        </div>
+        <div class="col-lg-9 descriptionBlock margin-top">
+          <h5>Computer Science Engineering</h5>
+          <p>IIIT R K Valley</p>
+          <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <div class="col-12 col-lg-3 block">
+            <div>2014-2017</div><br>
+            <h5>Bachelor's<br>Degree</h5>
+        </div>
+        <div class="col-12 d-lg-none descriptionBlock">
+          <h5>Computer Science Engineering</h5>
+          <p>IIIT R K Valley</p>
+          <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
+        </div>
+        <div class="col-lg-9 descriptionBlock margin-top">
+          <h5>Computer Science Engineering</h5>
+          <p>IIIT R K Valley</p>
+          <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
+        </div>
       </div>
     </div>
   </body>
