--- a/assignments/assignment-13/assignment13.html
+++ b/assignments/assignment-13/assignment13.html
@@ -29,7 +29,7 @@
           <p>IIIT R K Valley</p>
           <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
         </div>
-        <div class="col-lg-9 d-none descriptionBlock margin-top">
+        <div class="col-lg-9 d-none d-lg-block descriptionBlock margin-top">
           <h5>Computer Science Engineering</h5>
           <p>IIIT R K Valley</p>
           <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
@@ -46,7 +46,7 @@
           <p>IIIT R K Valley</p>
           <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
         </div>
-        <div class="col-lg-9 d-none descriptionBlock margin-top">
+        <div class="col-lg-9 d-none d-lg-block descriptionBlock margin-top">
           <h5>Computer Science Engineering</h5>
           <p>IIIT R K Valley</p>
           <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
@@ -63,7 +63,7 @@
           <p>IIIT R K Valley</p>
           <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
         </div>
-        <div class="col-lg-9 d-none descriptionBlock margin-top">
+        <div class="col-lg-9 d-none d-lg-block descriptionBlock margin-top">
           <h5>Computer Science Engineering</h5>
           <p>IIIT R K Valley</p>
           <p>Hi this is khyathi.I am studying Btech 3rd year.I am working as intern at ib hubs</p>
