--- a/class.html
+++ b/class.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" type="text/css" href="styles.css">    
     </head>
     <body style="background-color:black">
-        <p id="id2">
-            iB Hubs
+        <p id="id2" style="line-height:20%">
+            iB Hubs gefydn efgkuyeffkuywqd wqdqw sydtdwqwd basafysads sfya bZadsbnZfsad xfysdbxyfsvddwwtyd dftd st sc6 dstv  ss xtv cbn xav cbn ex wdb wsxn re q 5t 
         </p>
         <p id="id1">
             RK Valley
@@ -18,6 +18,7 @@
         </p>
         <p class="id4">
             Khyathi reddy
-        </p
+        </p>
+        <video src="https://www.w3schools.com/html/movie.mp4" autoplay loop></video>
     </body>
 </html>
