--- a/assignments/assignment-14/index.html
+++ b/assignments/assignment-14/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link rel="stylesheet" href="../../bootstrap/bootstrap.min.css" />
-    <script src="../../bootstrap/jquery.min.js"></script>
-    <script src="../../bootstrap/popper.min.js"></script>
-    <script src="../../bootstrap/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="index.css" />
-  </head>
 
-  <body>
-    <div class="container">
-      <h2>OUR APPROACH</h2>
-      <h3>Creating Workforce for 4.0</h3>
-      <p>iB Hubs commits to create a powerful workforce with all the necessary tools and techniques to thrive in this new wave of transformation.</p>
-    </div>
-    <div class="container medium d-none d-md-block">
-      <h3>Building Global Startups</h3>
-      <p>We provide end-to-end assistance to startups and develop them into global companies.</p>
-    </div>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <link rel="stylesheet" href="../../bootstrap/bootstrap.min.css" />
+  <script src="../../bootstrap/jquery.min.js"></script>
+  <script src="../../bootstrap/popper.min.js"></script>
+  <script src="../../bootstrap/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="index.css" />
+</head>
+
+<body>
+  <div class="container">
+    <h2>OUR APPROACH</h2>
+    <h3>Creating Workforce for 4.0</h3>
+    <p>iB Hubs commits to create a powerful workforce with all the necessary tools and techniques to thrive in this new wave of transformation.</p>
+  </div>
+  <div class="container medium d-none d-md-block">
+    <h3>Building Global Startups</h3>
+    <p>We provide end-to-end assistance to startups and develop them into global companies.</p>
+  </div>
+</body>
+
 </html>
