--- a/assignments/assignment-16/index.html
+++ b/assignments/assignment-16/index.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link rel="stylesheet" href="../../bootstrap/bootstrap.min.css" />
-    <script src="../../bootstrap/jquery.min.js"></script>
-    <script src="../../bootstrap/popper.min.js"></script>
-    <script src="../../bootstrap/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="index.css" />
-  </head>
 
-  <body>
-     <div class="container">
-      <div class="row">
-        <div class="col-12">
-            <h2>OUR APPROACH</h2>
-        </div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <link rel="stylesheet" href="../../bootstrap/bootstrap.min.css" />
+  <script src="../../bootstrap/jquery.min.js"></script>
+  <script src="../../bootstrap/popper.min.js"></script>
+  <script src="../../bootstrap/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="index.css" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <h2>OUR APPROACH</h2>
       </div>
-      <hr>
-      <div class="row">
-        <div class="col-12 col-md-6">
-          <h3 class="d-md-none">Creating Workforce for 4.0</h3>
-          <h3 class="d-none d-md-block blockmargin">Creating Workforce for 4.0</h3>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col-12 d-block d-md-none">
+        <h3>Building Global Startups</h3>
+        <p>We provide end-to-end assistance to startups and develop them into global companies.We give equal importance to Purpose Driven Social Enterprises,profit Driven Enterprises and Non-Profits.</p>
+      </div>
+      <div class="col-md-6 d-none d-md-block">
+          <h3><br></h3>
+          <h3>Creating Workforce for 4.0</h3>
           <p>iB Hubs commits to create a powerful workforce with all the necessary tools and techniques to thrive in this new wave of transformation.</p>
-        </div>
-        <div class="col-12 col-md-6">
-          <h3>Building Global Startups</h3>
-          <p>We provide end-to-end assistance to startups and develop them into global companies.We give equal importance to Purpose Driven Social Enterprises,profit Driven Enterprises and Non-Profits.</p>
-        </div>
       </div>
+      <div class="col-12 col-md-6">
+        <h3>Developing World-Class Products</h3>
+        <p>iB Hubs cutting-edge application R&D in 4.0 technologies combined with a strong entrepreneurial focus will enable the development of world-classproducts and services that impact billions of lives.</p>
       </div>
-  </body>
+    </div>
+  </div>
+</body>
+
 </html>
