--- a/assignments/assignment-17/index.html
+++ b/assignments/assignment-17/index.html
@@ -1,17 +1,82 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link rel="stylesheet" href="../../bootstrap/bootstrap.min.css" />
-    <script src="../../bootstrap/jquery.min.js"></script>
-    <script src="../../bootstrap/popper.min.js"></script>
-    <script src="../../bootstrap/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="index.css" />
-  </head>
 
-  <body></body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <link rel="stylesheet" href="../../bootstrap/bootstrap.min.css" />
+  <script src="../../bootstrap/jquery.min.js"></script>
+  <script src="../../bootstrap/popper.min.js"></script>
+  <script src="../../bootstrap/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="index.css" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 d-block d-md-none xsH1">
+        <h1><center>OUR APPROACH</center></h1>
+      </div>
+      <div class="col-12 d-none d-md-block d-lg-none mdH1">
+        <h1><center>OUR APPROACH</center></h1>
+      </div>
+      <div class="col-12 d-none d-lg-block lgH1">
+        <h1>OUR APPROACH</h1>
+      </div>
+    </div>
+    <hr>
+    <div class="container">
+      <div class="row">
+        <div class="col-12 d-block d-md-none">
+          <h2 class="xsH2">Creating Workforce for 4.0</h2>
+          <p class="xsPara">iB Hubs commits to create a powerful workforce with all the necessary tools and techniques to thrive in this new wave of transformation.</p>
+        </div>
+        <div class="col-md-6 d-none d-md-block d-lg-none">
+          <h2 class="mdH2">Creating Workforce for 4.0</h2>
+          <p class="mdPara">iB Hubs commits to create a powerful workforce with all the necessary tools and techniques to thrive in this new wave of transformation.</p>
+        </div>
+        <div class="col-lg-4 d-none d-lg-block">
+          <h2 class="lgH2">Creating Workforce for 4.0</h2>
+          <p class="lgPara">iB Hubs commits to create a powerful workforce with all the necessary tools and techniques to thrive in this new wave of transformation.</p>
+        </div>
+        <div class="col-12 d-block d-md-none">
+          <h2 class="xsH2">Building Global Startups</h2>
+          <p class="xsPara">We provide end-to-end assistance to startups and develop them into global companies.We give equal importance to Purpose Driven Social Enterprises,profit Driven Enterprises and Non-Profits.</p>
+        </div>
+        <div class="col-md-6 d-none d-md-block d-lg-none">
+          <h2 class="mdH2">Building Global Startups</h2>
+          <p class="mdPara">We provide end-to-end assistance to startups and develop them into global companies.We give equal importance to Purpose Driven Social Enterprises,profit Driven Enterprises and Non-Profits.</p>
+        </div>
+        <div class="col-lg-4 d-none d-lg-block">
+          <h2 class="lgH2">Building Global Startups</h2>
+          <p class="lgPara">We provide end-to-end assistance to startups and develop them into global companies.We give equal importance to Purpose Driven Social Enterprises,profit Driven Enterprises and Non-Profits.</p>
+        </div>
+        <div class="col-12 d-block d-md-none">
+          <h2 class="xsH2">Application R&D in 4.0 Technologies</h2>
+          <p class="xsPara">
+            iB Hubs tech Parks carry out application R&D in these new-age technologies.This will lead to the building of innovative solutions for the world's current challenges, enabling human advancement.
+          </p>
+        </div>
+        <div class="col-md-6 d-none d-md-block d-lg-none">
+          <h2 class="mdH2">Application R&D in 4.0 Technologies</h2>
+          <p class="mdPara">
+            iB Hubs tech Parks carry out application R&D in these new-age technologies.This will lead to the building of innovative solutions for the world's current challenges, enabling human advancement.
+          </p>
+        </div>
+        <div class="col-12 d-block d-md-none">
+          <h2 class="xsH2">Developing World-Class Products</h2>
+          <p class="xsPara">iB Hubs cutting-edge application R&D in 4.0 technologies combined with a strong entrepreneurial focus will enable the development of world-classproducts and services that impact billions of lives.</p>
+        </div>
+        <div class="col-md-6 d-none d-md-block d-lg-none">
+          <h2 class="mdH2">Developing World-Class Products</h2>
+          <p class="mdPara">iB Hubs cutting-edge application R&D in 4.0 technologies combined with a strong entrepreneurial focus will enable the development of world-classproducts and services that impact billions of lives.</p>
+        </div>
+        <div class="col-lg-4 d-none d-lg-block">
+          <h2 class="lgH2">Developing World-Class Products</h2>
+          <p class="lgPara">iB Hubs cutting-edge application R&D in 4.0 technologies combined with a strong entrepreneurial focus will enable the development of world-classproducts and services that impact billions of lives.</p>
+        </div>
+      </div>
+    </div>
+</body>
+
 </html>
