--- a/assignments/assignment-19/index.html
+++ b/assignments/assignment-19/index.html
@@ -78,22 +78,32 @@
           <p class="opacity">@2017-2018</p>
         </div>
         <div class="col-6 col-lg-3">
-          <h5>Features</h5>
-          <p class="opacity">Cool stuff<br> Random feature<br> Team feature<br> Stuff for developers<br> Another one<br> Last time<br></p>
+          <ul>
+            <li><h5>Features</h5></li>
+            <li class="opacity">Cool stuff</li>
+            <li class="opacity">Random feature</li>
+            <li class="opacity">Team feature</li>
+            <li class="opacity">Stuff for developers</li>
+            <li class="opacity">Another one</li>
+            <li class="opacity">Last time</li>
+          </ul>
         </div>
         <div class="col-6 col-lg-3">
-          <h5>Resources</h5>
-          <p class="opacity">Resources<br>
-            <Resource name<br>
-              Another resources<br> Final resources<br>
-          </p>
+          <ul>
+            <li><h5>Resources</h5></li>
+            <li class="opacity">Resource name</li>
+            <li class="opacity">Another Resources</li>
+            <li class="opacity">Final resources</li>
+          </ul>
         </div>
         <div class="col-6 col-lg-3">
-          <h5>About</h5>
-          <p class="opacity">Team <br> Locations
-            <br> Privacy
-            <br> Terms
-            <br></p>
+          <ul>
+            <li><h5>About</h5></li>
+            <li class="opacity">Team</li>
+            <li class="opacity">Locations</li>
+            <li class="opacity"> Privacy</li>
+            <li class="opacity">Terms</li>
+          </ul>
         </div>
       </div>
     </div>
