--- a/assignments/assignment-20/index.html
+++ b/assignments/assignment-20/index.html
@@ -14,55 +14,61 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-12 col-md-8 backgroundImage">
+      <div class="col-12 col-md-9 black1">
         <div class="row">
-          <div class="col-12 black">
+          <div class="col-12">
             <div class="row">
-              <div class="col-6 gradient">
-                <h3 class="font_color head">Friday</h3>
-                <p class="font_color date">31 Jan 2020</p>
-                <p class="font_color district"><img src="assets/location.svg" alt="location"> Kurnool</p>
+              <div class="col-6 backgroundImage">
+                <div class="row">
+                  <div class="col-12 gradient">
+                    <h3 class="font_color head">Friday</h3>
+                    <p class="font_color date">31 Jan 2020</p>
+                    <p class="font_color district"><img src="assets/location.svg" alt="location"  class="locationImg"> Kurnool</p>
+                    <img src="assets/sun-white.svg" alt="white-sun" class="gradientSun">
+                    <p class="font_color temperature">29C</p>
+                    <h5 class="font_color">Sunny</h5>
+                  </div>
+                </div>
               </div>
               <div class="col-6 black">
                 <div class="row">
-                  <div class="col-9">
+                  <div class="col-7">
                     <h6 class="font_color head">PRECIPITATION</h6>
                     <h6 class="font_color">HUMIDITY</h6>
                     <h6 class="font_color">WIND</h6>
                   </div>
-                  <div class="col-3">
+                  <div class="col-5">
                     <p class="font_color head weatherValues">0%</p>
                     <p class="font_color weatherValues">34%</p>
                     <p class="font_color weatherValues">0 km/h</p>
                   </div>
                 </div>
                 <div class="row weatherspace">
-                  <div class="col-3">
-                    <div class="sat">
-                      <img src="assets/sun-black.svg" alt="black-sun">
-                      <p>Sat</p>
-                      <p>29 C</p>
-                    </div>
+                  <div class="col-2 sat">
+                    <img src="assets/sun-black.svg" alt="black-sun" class="days">
+                    <p class="days">Sat</p>
+                    <p class="temp">29c</p>
                   </div>
-                  <div class="col-3">
-                    <div class="sun">
-                      <img src="assets/cloud.svg" alt="cloud">
-                      <p>Sun</p>
-                      <p>21 C</p>
-                    </div>
+                  <div class="col-3 sun">
+                    <img src="assets/cloud.svg" alt="cloud" class="days">
+                    <p class="days">Sun</p>
+                    <p class="temp">21 C</p>
                   </div>
-                  <div class="col-3">
-                    <div class="sun">
-                      <img src="assets/cloud-snow.svg" alt="cloud">
-                      <p>Sun</p>
-                      <p>21 C</p>
-                    </div>
+                  <div class="col-3 sun">
+                    <img src="assets/cloud-snow.svg" alt="cloud" class="days">
+                    <p class="days">Mon</p>
+                    <p class="temp">08 C</p>
                   </div>
-                  <div class="col-3">
-                    <div class="sun">
-                      <img src="assets/cloud-rain.svg" alt="cloud">
-                      <p>Sun</p>
-                      <p>21 C</p>
+                  <div class="col-3 sun">
+                    <img src="assets/cloud-rain.svg" alt="cloud" class="days">
+                    <p class="days">Tue</p>
+                    <p class="temp">19 C</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-12">
+                    <div class="changeLocation">
+                      <p class="locationPadding"><img src="assets/location.svg" alt="location" class=locationImg> Change location</p>
                     </div>
                   </div>
                 </div>
