--- a/assignments/assignment-19/index.html
+++ b/assignments/assignment-19/index.html
@@ -20,7 +20,14 @@
     </div>
   </div>
   <div class="card shadow p-3 mb-5 bg-white rounded d-none d-lg-block">
-    <p><span class="companyName">Company name</span><span>Features &nbsp; Enterprise &nbsp; Support &nbsp; Pricing &nbsp;&nbsp;</span><span><button class="btn btn-outline-primary">Sign up</button></span></p>
+    <div class="row">
+      <div class="col-7">
+        <h5>Company name</h5>
+      </div>
+      <div class="col-5">
+        <p><span>Features &nbsp; Enterprise &nbsp; Support &nbsp; Pricing &nbsp;&nbsp;</span><span><button class="btn btn-outline-primary">Sign up</button></span></p>
+      </div>
+    </div>
   </div>
   <div class="container blockSpace">
     <div class="row">
@@ -38,8 +45,13 @@
             Free
           </div>
           <div class="card-body">
-            <h2 class="card-title">$0 / <span class="opacity">mo</span></h2>
-            <p class="card-text">10 users included<br>2 GB of storage<br>Email support<br>Help center access.</p>
+            <ul>
+              <li><h2 class="card-title">$0 / <span class="opacity">mo</span></h2></li>
+              <li>10 users included</li>
+              <li>2 GB of storage</li>
+              <li>Email support</li>
+              <li>Help center access</li>
+            </ul>
             <a href="#" class="btn btn-outline-primary buttonWidth">Sign up for free</a>
           </div>
         </div>
@@ -50,8 +62,13 @@
             Pro
           </div>
           <div class="card-body">
-            <h2 class="card-title">$15 / <span class="opacity">mo</span></h2>
-            <p class="card-text">20 users included<br>10 GB of storage<br>Priority Email support<br>Help center access.</p>
+            <ul>
+              <li><h2 class="card-title">$15 / <span class="opacity">mo</span></h2></li>
+              <li>20 users included</li>
+              <li>10 GB of storage</li>
+              <li>Priority email support</li>
+              <li>Help center access</li>
+            </ul>
             <a href="#" class="btn btn-primary buttonWidth">Get started</a>
           </div>
         </div>
@@ -62,8 +79,13 @@
             Enterprise
           </div>
           <div class="card-body">
-            <h2 class="card-title">$29 / <span class="opacity">mo</span></h2>
-            <p class="card-text">30 users included<br>15 GB of storage<br>Phone and Email support<br>Help center access.</p>
+            <ul>
+              <li><h2 class="card-title">$29 / <span class="opacity">mo</span></h2></li>
+              <li>30 users included</li>
+              <li>15 GB of storage</li>
+              <li>Phone and email support</li>
+              <li>Help center access</li>
+            </ul>
             <a href="#" class="btn btn-primary buttonWidth">Contact us</a>
           </div>
         </div>
