--- a/assignments/assignment-19/index.html
+++ b/assignments/assignment-19/index.html
@@ -24,7 +24,7 @@
       <div class="col-7">
         <h5>Company name</h5>
       </div>
-      <div class="col-5">
+      <div class="col-5 alignRight">
         <p><span>Features &nbsp; Enterprise &nbsp; Support &nbsp; Pricing &nbsp;&nbsp;</span><span><button class="btn btn-outline-primary">Sign up</button></span></p>
       </div>
     </div>
