--- a/assignments/assignment-19/index.html
+++ b/assignments/assignment-19/index.html
@@ -96,8 +96,10 @@
       <div class="row">
         <div class="col-12 col-lg-3">
           <!--<img src="../../static/Social Icons/facebook.svg" alt="icons">-->
-          <h3 class="bootstrapicon">B</h3>
-          <p class="opacity">@2017-2018</p>
+          <ul>
+            <li><h3 class="bootstrapicon">B</h3></li>
+            <li><p class="opacity">@2017-2018</p></li>
+          </ul>
         </div>
         <div class="col-6 col-lg-3">
           <ul>
